--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -9,13 +9,17 @@
 
 html {
     box-sizing: border-box;
-    font: 16px/1.3 "Arial", sans-serif;
+    /* font: 16px/1.3 "Arial", sans-serif; */
     /* max-width: 1300px; */
+    /* font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"; */
     margin: 0 auto;
+    font: 16px/1.3 'Times New Roman', Times, serif;
+
 }
 
 body {
-    background-image: url(/img/background.jpg);
+    /* background-image: url(img/background.jpg); */
+    background-image: url(/img/background1.png);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -45,20 +49,26 @@ footer div {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 1em 0;
 }
 
 .zaoblen{
    background-color: rgba(0, 0, 0, 0.7);
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
     border-radius: 0 2em 0 2em;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: oblique;
+    letter-spacing: 0.5em;
+
+
 }
 
 button {
     color: black;
     background-color:#eef14a;
+
 
     /* font-weight: bold; */
 }
@@ -119,16 +129,16 @@ button {
     will-change: box-shadow,transform;
     /* font-size: 18px; */
   }
-  
+
   .button-29:focus {
     box-shadow: #c1c44e 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4d4c08 0 -3px 0 inset;
   }
-  
+
   .button-29:hover {
     box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4d4c08 0 -3px 0 inset;
     transform: translateY(-2px);
   }
-  
+
   .button-29:active {
     box-shadow: #4d4c08 0 3px 7px inset;
     transform: translateY(2px);
@@ -140,5 +150,9 @@ button {
     height: auto;
     margin-right: 0.5em;
     border-radius: 50%;
-    
+
+  }
+
+  h1 {
+    font-style: oblique;
   }
