Create and initialize roles

--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -56,7 +56,7 @@ footer div {
     padding: 1em 0;
 }
 
-.zaoblen{
+.my-container{
    background-color: rgba(0, 0, 0, 0.7);
     /* border: 1px solid lightgray; */
     border-radius: 0 2em 0 2em;
