--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -160,3 +160,8 @@ button {
      font-size: 5em;
      font-weight: bold;
   }
+
+  .custom-round {
+    border: 1px solid lightgray;
+    border-radius: 0 2em 0 2em;
+ }
