--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -37,6 +37,7 @@
   </nav>
 </header>
 <footer>
+  <!-- todo: fix responsive issue with position-fixed -->
   <div>&copy Ivan Rusenov 2024</div>
 </footer>
 
