--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -162,6 +162,24 @@ button {
   }
 
   .custom-round {
-    border: 1px solid lightgray;
+    border: 1px solid light-gray;
     border-radius: 0 2em 0 2em;
+ }
+
+   .card img {
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+   }
+
+   .card:hover {
+     transform: scale(1.05);
+ }
+
+ .home {
+
+   background-image: url(img/Untitled4.png);
+   background-color: rgba(0, 0, 0, 1);
+   background-blend-mode: overlay;
+
  }
