--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments/commons::head}"></head>
 <body>
 <header th:replace="~{fragments/commons::nav}"></header>
-<main>
+<main class="home">
     <div class="container d-flex flex-wrap justify-content-center mx-auto my-5">
         <div class="card m-3 text-center flex-shrink-0" style="width: 18rem;">
 <!--            todo: the images must be of the same height.-->
