make home.html responsive

--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -27,7 +27,7 @@
       <li th:unless="${@loggedUser.isLogged}">
         <a th:href="@{/login}">Login</a>
       </li>
-      <li th:uless="${@loggedUser.isLogged}">
+      <li th:unless="${@loggedUser.isLogged}">
         <a th:href="@{/register}">Register</a>
       </li>
       <li th:if="${@loggedUser.isLogged}">
