--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -54,6 +54,7 @@ footer div {
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 1em 0;
+    margin-top: 2em;
 }
 
 .my-container{
@@ -176,10 +177,27 @@ button {
      transform: scale(1.05);
  }
 
- .home {
-
-   background-image: url(img/Untitled4.png);
+  .home {
    background-color: rgba(0, 0, 0, 1);
    background-blend-mode: overlay;
 
+ }
+
+.card {
+   height: 70vh;
+   margin-bottom: 2em;
+   border-radius: 0 3em;
+   overflow: hidden;
+}
+
+ .media {
+     height: 70%;
+     overflow: hidden;
+ }
+
+ .media img {
+     width: 100%;
+     height: 100%;
+     object-fit: fill;
+     padding: 1em;
  }
