--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -83,93 +83,94 @@
 <!--    </div>-->
 
     <div class="container text-center my-5">
-        <div class="row g-5">
-            <div class="col-12 col-md-6 col-lg-4">
+        <div th:object="${bouquets}" class="row g-5">
+            <div th:each="bouquet: ${bouquets}" class="col-12 col-md-6 col-lg-4">
                 <div class="card">
                     <div class="media">
-                        <img src="/img/boxes/box1.jpg" alt="picture of bouquet">
+                        <img th:src="${bouquet.url}" alt="picture of bouquet">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Bouquet of light pink roses in a box No.264</h5>
-                        <p class="card-text">Price: 362,50 lv.</p>
+                        <h5 class="card-title" th:text="${bouquet.description}">Bouquet of light pink roses in a box No.264</h5>
+                        <p class="card-text" th:tetx="|No. ${bouquet.number}|">No. 267</p>
+                        <p class="card-text mb-2" th:tetx="|Price: ${bouquet.price}|">Price: 362,50 lv.</p>
                         <form action="#">
                             <button class="button-29 rounded-pill">ADD TO CART</button>
                         </form>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card ">
-                    <div class="media">
-                        <img src="/img/boxes/box2.jpg" alt="picture of bouquet" class="card-img-top">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Bouquet of pink roses in a box No.365</h5>
-                        <p class="card-text">Price: 369,87 lv.</p>
-                        <form action="#">
-                            <button class="button-29 rounded-pill">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <div class="media">
-                        <img src="/img/boxes/box3.jpg" class="card-img-top">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Bouquet of red roses in a box</h5>
-                        <p class="card-text">Price: 585,26 lv.</p>
-                        <form action="#">
-                            <button class="button-29 rounded-pill">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row g-5">
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <div class="media">
-                        <img src="/img/boxes/box4.jpg" alt="picture of bouquet">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Bouquet of blue roses in a box</h5>
-                        <p class="card-text">Price: 1293,26 lv.</p>
-                        <form action="#">
-                            <button class="button-29 rounded-pill">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <div class="media">
-                        <img src="/img/boxes/box5.jpg" class="card-img-top">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title"> picture of bouquet</h5>
-                        <p class="card-text">pjiabspi b</p>
-                        <form action="#">
-                            <button class="button-29 rounded-pill">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <div class="media">
-                        <img src="/img/boxes/box7.jpg" class="card-img-top">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title"> picture of bouquet</h5>
-                        <p class="card-text">pjiabspi b</p>
-                        <form action="#">
-                            <button class="button-29 rounded-pill">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+<!--            </div>-->
+<!--            <div class="col-12 col-md-6 col-lg-4">-->
+<!--                <div class="card ">-->
+<!--                    <div class="media">-->
+<!--                        <img src="/img/boxes/box2.jpg" alt="picture of bouquet" class="card-img-top">-->
+<!--                    </div>-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Bouquet of pink roses in a box No.365</h5>-->
+<!--                        <p class="card-text">Price: 369,87 lv.</p>-->
+<!--                        <form action="#">-->
+<!--                            <button class="button-29 rounded-pill">ADD TO CART</button>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-12 col-md-6 col-lg-4">-->
+<!--                <div class="card">-->
+<!--                    <div class="media">-->
+<!--                        <img src="/img/boxes/box3.jpg" class="card-img-top">-->
+<!--                    </div>-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Bouquet of red roses in a box</h5>-->
+<!--                        <p class="card-text">Price: 585,26 lv.</p>-->
+<!--                        <form action="#">-->
+<!--                            <button class="button-29 rounded-pill">ADD TO CART</button>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row g-5">-->
+<!--            <div class="col-12 col-md-6 col-lg-4">-->
+<!--                <div class="card">-->
+<!--                    <div class="media">-->
+<!--                        <img src="/img/boxes/box4.jpg" alt="picture of bouquet">-->
+<!--                    </div>-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Bouquet of blue roses in a box</h5>-->
+<!--                        <p class="card-text">Price: 1293,26 lv.</p>-->
+<!--                        <form action="#">-->
+<!--                            <button class="button-29 rounded-pill">ADD TO CART</button>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-12 col-md-6 col-lg-4">-->
+<!--                <div class="card">-->
+<!--                    <div class="media">-->
+<!--                        <img src="/img/boxes/box5.jpg" class="card-img-top">-->
+<!--                    </div>-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title"> picture of bouquet</h5>-->
+<!--                        <p class="card-text">pjiabspi b</p>-->
+<!--                        <form action="#">-->
+<!--                            <button class="button-29 rounded-pill">ADD TO CART</button>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-12 col-md-6 col-lg-4">-->
+<!--                <div class="card">-->
+<!--                    <div class="media">-->
+<!--                        <img src="/img/boxes/box7.jpg" class="card-img-top">-->
+<!--                    </div>-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title"> picture of bouquet</h5>-->
+<!--                        <p class="card-text">pjiabspi b</p>-->
+<!--                        <form action="#">-->
+<!--                            <button class="button-29 rounded-pill">ADD TO CART</button>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 
