--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title" th:text="${bouquet.description}">{description}</h5>
-                        <p class="card-text" th:text="|No. ${bouquet.number}|">{No.}</p>
+                        <p class="card-text" th:text="|No. ${bouquet.itemNumber}|">{No.}</p>
                         <p class="card-text mb-2" th:text="|Price: ${bouquet.price}|">{Price: lv.}</p>
                         <form action="#">
                             <button class="button-29 rounded-pill">ADD TO CART</button>
