--- a/Flowers-Shop/src/main/resources/templates/login.html
+++ b/Flowers-Shop/src/main/resources/templates/login.html
@@ -5,11 +5,12 @@
 <header th:replace="~{fragments/commons::nav}"></header>
 <main>
   <!-- todo: fix responsive issue with position-absolute -->
+<!--  TODO:REMOVE USERNAME AND PASSWORD !!!-->
   <div class="position-absolute top-50 start-50 translate-middle content-wrap w-25 mx-auto bg-opacity-75 bg-black border custom-round">
     <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Login</span></h1>
     <form class="form-floating mx-auto w-75 bg-blur" th:method="post" th:action="@{/login}" th:object="${userLoginDTO}">
       <div class="form-floating mb-3 text-center">
-        <input th:field="*{username}" th:errorclass="is-invalid" class="form-control" id="username" placeholder="Username">
+        <input th:field="*{username}" th:errorclass="is-invalid" class="form-control" id="username" placeholder="Username" value="adi">
         <label for="username">Username</label>
         <small th:errors="*{username}" class="text-danger ">Username error message</small>
       </div>
@@ -19,7 +20,7 @@
 <!--        <small th:errors="*{email}" class="text-danger">Email error message</small>-->
 <!--      </div>-->
       <div class="form-floating mb-3 text-center">
-        <input th:field="*{password}" th:errorclass="is-invalid" type="password" class="form-control" id="password" placeholder="Password">
+        <input th:field="*{password}" th:errorclass="is-invalid" type="password" class="form-control" id="password" placeholder="Password" value="111">
         <label for="password">Password</label>
         <small th:errors="*{password}" class="text-danger">Password error message</small>
       </div>
