--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -85,19 +85,21 @@
     <div class="container text-center my-5">
         <div th:object="${bouquets}" class="row g-5">
             <div th:each="bouquet: ${bouquets}" class="col-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <div class="media">
-                        <img th:src="${bouquet.url}" alt="picture of bouquet">
+<!--                <form th:method="post" th:action="@{/cart/add/{itemNumber}(itemNumber=*{bouquet.itemNumber})}">-->
+                    <div class="card">
+                        <div class="media">
+                            <img th:src="${bouquet.url}" alt="picture of bouquet">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${bouquet.description}">{description}</h5>
+                            <p class="card-text" th:text="|No. ${bouquet.itemNumber}|">{No.}</p>
+                            <p class="card-text mb-2" th:text="|Price: ${bouquet.price}|">{Price: lv.}</p>
+
+                                <a th:href="@{/cart/add/{itemNumber}(itemNumber=${bouquet.itemNumber})}" class="button-29 rounded-pill">ADD TO CART</a>
+
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${bouquet.description}">{description}</h5>
-                        <p class="card-text" th:text="|No. ${bouquet.itemNumber}|">{No.}</p>
-                        <p class="card-text mb-2" th:text="|Price: ${bouquet.price}|">{Price: lv.}</p>
-                        <form action="#">
-                            <button class="button-29 rounded-pill">ADD TO CART</button>
-                        </form>
-                    </div>
-                </div>
+<!--                </form>-->
 <!--            </div>-->
 <!--            <div class="col-12 col-md-6 col-lg-4">-->
 <!--                <div class="card ">-->
@@ -173,7 +175,7 @@
 <!--            </div>-->
         </div>
     </div>
-
+</div>
 </main>
 
 
