--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -34,7 +34,9 @@
         <a th:href="@{/logout}">Logout</a>
       </li>
       <li th:if="${@loggedUser.isLogged}">
-        <img src="img/shopping-cart.png" alt="cart">
+        <a th:href="@{/cart}">
+          <img src="img/shopping-cart.png" alt="cart">
+        </a>
       </li>
     </ul>
   </nav>
