--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
-<body>
+<body class="cart">
 <header th:replace="~{fragments/commons::nav}"></header>
-    <div class="container text-center mt-5">
+    <div class="container text-center mt-5 text-white">
 
         <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">CART</h1>
 
             <div class="container-fluid mb-5">
 
-                <div class="row align-items-center m-3 myClass" >
+                <div class="row align-items-center m-3 cart-round" >
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="../img/bouquets/81L56JJOXEL._AC_UL320_.jpg" alt="picture of bouquet">
+                        <img src="/img/boxes/box11.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -22,15 +22,15 @@
                     </div>
 
                     <div class="col-12 col-md-2">
-                        <button class="button-29 rounded-pill px-3">Remove</button>
+                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
                     </div>
 
                 </div>
 
-                <div class="row align-items-center m-3 myClass">
+                <div class="row align-items-center m-3 cart-round">
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="../img/bouquets/81fAYbZHOCL._AC_UL320_.jpg" alt="picture of bouquet">
+                        <img src="/img/boxes/box10.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -40,15 +40,15 @@
                     </div>
 
                     <div class="col-12 col-md-2">
-                        <button class="button-29 rounded-pill px-3">Remove</button>
+                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
                     </div>
 
                 </div>
 
-                <div class="row align-items-center m-3 myClass">
+                <div class="row align-items-center m-3 cart-round">
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="../img/bouquets/81Ws0ntSFZL._AC_UL320_.jpg" alt="picture of bouquet">
+                        <img src="/img/boxes/box9.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -58,15 +58,15 @@
                     </div>
 
                     <div class="col-12 col-md-2">
-                        <button class="button-29 rounded-pill px-3">Remove</button>
+                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
                     </div>
 
                 </div>
 
-                <div class="row align-items-center m-3 myClass">
+                <div class="row align-items-center m-3 cart-round">
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="../img/bouquets/71nrqr6QMnL._AC_UL320_.jpg" alt="picture of bouquet">
+                        <img src="/img/boxes/box8.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="col-12 col-md-2">
-                        <button class="button-29 rounded-pill px-3">Remove</button>
+                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
                     </div>
 
                 </div>
