--- a/Flowers-Shop/src/main/resources/templates/index.html
+++ b/Flowers-Shop/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{fragments/commons::head}"></head>
-<body>
+<body class="background1">
     <header th:replace="~{fragments/commons::nav}"></header>
     <main>
         <section class="position-absolute top-50 start-50 translate-middle my-container">
