--- a/Flowers-Shop/src/main/resources/templates/bouquet-add.html
+++ b/Flowers-Shop/src/main/resources/templates/bouquet-add.html
@@ -56,7 +56,7 @@
 
             </div>
             <div class="form-floating mb-3 text-center">
-                <button class="button-29 rounded-pill p-2 w-50 my-2 ">REGISTER</button>
+                <button class="button-29 rounded-pill p-2 w-50 my-2 ">Add</button>
             </div>
         </form>
     </div>
