implement Spring Security

--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -12,7 +12,7 @@
                 <div class="row align-items-center m-3 cart-round" >
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="/img/boxes/box11.jpg" alt="picture of bouquet">
+                        <img src="/images/boxes/box11.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -30,7 +30,7 @@
                 <div class="row align-items-center m-3 cart-round">
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="/img/boxes/box10.jpg" alt="picture of bouquet">
+                        <img src="/images/boxes/box10.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -48,7 +48,7 @@
                 <div class="row align-items-center m-3 cart-round">
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="/img/boxes/box9.jpg" alt="picture of bouquet">
+                        <img src="/images/boxes/box9.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
@@ -66,7 +66,7 @@
                 <div class="row align-items-center m-3 cart-round">
 
                     <div class="media col-12 col-md-3 p-2">
-                        <img src="/img/boxes/box8.jpg" alt="picture of bouquet">
+                        <img src="/images/boxes/box8.jpg" alt="picture of bouquet">
                     </div>
 
                     <div class="col-12 col-md-7 fs-5">
