--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -19,7 +19,7 @@ html {
 
 .background1 {
     /* background-image: url(img/background.jpg); */
-    background-image: url(/img/background1.png);
+    background-image: url(/images/background1.png);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
