--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -19,9 +19,9 @@
     <ul>
       <li>
         <img src="/images/orchid_9704101.png" alt="orchid">
-        <a href="/">Orchid app</a>
+        <a th:href="@{/}">Orchid app</a>
       </li>
-      <li sec:authorize="isAuthenticated()">
+      <li sec:authorize="hasRole('ADMIN')">
         <a th:href="@{/bouquet/add}">Add Bouquet</a>
       </li>
       <li sec:authorize="isAuthenticated()">
