--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -35,7 +35,9 @@
         <a th:href="@{/register}">Register</a>
       </li>
       <li sec:authorize="isAuthenticated()">
-        <a th:href="@{/logout}">Logout</a>
+        <form th:action="@{/logout}" th:method="post">
+          <button type="submit" class="text-white bg-black">Logout</button>
+        </form>
       </li>
       <li sec:authorize="isAuthenticated()">
         <a th:href="@{/cart}">
